--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.15.0",
 		"multer": "^2.0.0",
-		"nodemailer": "^7.0.3"
+		"resend": "^6.7.0"
 	},
 	"devDependencies": {
 		"@types/cookie-parser": "^1.4.8",
