--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@types/multer": "^1.4.12",
 		"@types/node": "^22.15.21",
 		"@types/nodemailer": "^7.0.4",
+		"@types/react": "^19.2.8",
 		"copyfiles": "^2.4.1",
 		"nodemon": "^3.1.10",
 		"ts-node": "^10.9.2",
